feat: atualização teste.ipynb

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,74 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import netsci.visualization as nsv\n",
-    "import netsci.metrics.motifs as nsm"
+    "import netsci.metrics.motifs as nsm\n",
+    "from igraph import Graph, plot\n",
+    "import cairocffi as cairo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600pt\" height=\"600pt\" viewBox=\"0 0 600 600\" version=\"1.1\">\n",
+       "<g id=\"surface14\">\n",
+       "<rect x=\"0\" y=\"0\" width=\"600\" height=\"600\" style=\"fill:rgb(100%,100%,100%);fill-opacity:1;stroke:none;\"/>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(74.509804%,74.509804%,74.509804%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 278.210938 20 L 541.507812 31.957031 \"/>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(74.509804%,74.509804%,74.509804%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 278.210938 20 L 20 72.347656 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 283.210938 20 C 283.210938 26.667969 273.210938 26.667969 273.210938 20 C 273.210938 13.332031 283.210938 13.332031 283.210938 20 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 546.507812 31.957031 C 546.507812 38.625 536.507812 38.625 536.507812 31.957031 C 536.507812 25.289062 546.507812 25.289062 546.507812 31.957031 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 585 539.878906 C 585 546.542969 575 546.542969 575 539.878906 C 575 533.210938 585 533.210938 585 539.878906 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 25 72.347656 C 25 79.015625 15 79.015625 15 72.347656 C 15 65.679688 25 65.679688 25 72.347656 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 68.480469 580 C 68.480469 586.667969 58.480469 586.667969 58.480469 580 C 58.480469 573.332031 68.480469 573.332031 68.480469 580 \"/>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<igraph.drawing.cairo.plot.CairoPlot at 0x7efe7bd69250>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {
+      "image/svg+xml": {
+       "isolated": true
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a random graph with 4096 nodes\n",
+    "num_nodes = 5\n",
+    "ig_random_graph = Graph.Erdos_Renyi(num_nodes, 0.2)\n",
+    "\n",
+    "# You can adjust the probability parameter (0.2 in this case) to control the edge density\n",
+    "plot(ig_random_graph, vertex_size=10, vertex_color=\"blue\", edge_color=\"gray\", layout=\"fr\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan, nan, 1, 0]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ig_random_graph.motifs_randesu(3)\n",
+    "b = ig_random_graph.motifs_randesu_no(3)\n",
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
