--- a/teste.ipynb
+++ b/teste.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,23 +25,23 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600pt\" height=\"600pt\" viewBox=\"0 0 600 600\" version=\"1.1\">\n",
-       "<g id=\"surface14\">\n",
+       "<g id=\"surface2\">\n",
        "<rect x=\"0\" y=\"0\" width=\"600\" height=\"600\" style=\"fill:rgb(100%,100%,100%);fill-opacity:1;stroke:none;\"/>\n",
-       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(74.509804%,74.509804%,74.509804%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 278.210938 20 L 541.507812 31.957031 \"/>\n",
-       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(74.509804%,74.509804%,74.509804%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 278.210938 20 L 20 72.347656 \"/>\n",
-       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 283.210938 20 C 283.210938 26.667969 273.210938 26.667969 273.210938 20 C 273.210938 13.332031 283.210938 13.332031 283.210938 20 \"/>\n",
-       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 546.507812 31.957031 C 546.507812 38.625 536.507812 38.625 536.507812 31.957031 C 536.507812 25.289062 546.507812 25.289062 546.507812 31.957031 \"/>\n",
-       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 585 539.878906 C 585 546.542969 575 546.542969 575 539.878906 C 575 533.210938 585 533.210938 585 539.878906 \"/>\n",
-       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 25 72.347656 C 25 79.015625 15 79.015625 15 72.347656 C 15 65.679688 25 65.679688 25 72.347656 \"/>\n",
-       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 68.480469 580 C 68.480469 586.667969 58.480469 586.667969 58.480469 580 C 58.480469 573.332031 68.480469 573.332031 68.480469 580 \"/>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(74.509804%,74.509804%,74.509804%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 20 133.433594 L 238.03125 48.414062 \"/>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(74.509804%,74.509804%,74.509804%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 470.179688 20 L 238.03125 48.414062 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 25 133.433594 C 25 140.097656 15 140.097656 15 133.433594 C 15 126.765625 25 126.765625 25 133.433594 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 475.179688 20 C 475.179688 26.667969 465.179688 26.667969 465.179688 20 C 465.179688 13.332031 475.179688 13.332031 475.179688 20 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 585 467.753906 C 585 474.421875 575 474.421875 575 467.753906 C 575 461.085938 585 461.085938 585 467.753906 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 139.386719 580 C 139.386719 586.667969 129.386719 586.667969 129.386719 580 C 129.386719 573.332031 139.386719 573.332031 139.386719 580 \"/>\n",
+       "<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,100%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 243.03125 48.414062 C 243.03125 55.078125 233.03125 55.078125 233.03125 48.414062 C 233.03125 41.746094 243.03125 41.746094 243.03125 48.414062 \"/>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<igraph.drawing.cairo.plot.CairoPlot at 0x7efe7bd69250>"
+       "<igraph.drawing.cairo.plot.CairoPlot at 0x7fec51e02050>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {
       "image/svg+xml": {
        "isolated": true
