--- a/teste.ipynb
+++ b/teste.ipynb
@@ -1473,16 +1473,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1294,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DISEASES = ['SB', '1dAVb', 'LBBB', 'ST', 'AF', 'RBBB']\n",
-    "DISEASES_INDEXES = {disease: i for i, disease in enumerate(DISEASES)}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1295,
    "metadata": {},
    "outputs": [],
@@ -8015,13 +8005,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8606,6 +8589,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Os resultados acima demostram que, em geral, não há resultados muito promissores para nenhum classificador e nenhuma label. Uma exceção é a label LBBB, que paraece ter um valores de precisão e revocação interessantes, a depender do classificador. Nesse sentido, a Regressão Logística parece desempenhar um papel razoável na classificação dessa label."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### ClassifierChain"
    ]
   },
@@ -8667,6 +8657,13 @@
     "| SVC                           | ST    |      0.33 |     0.27 |     0.29 |\n",
     "| SVC                           | AF    |      0.15 |     0.04 |     0.07 |\n",
     "| SVC                           | RBBB  |      0.28 |     0.18 |     0.22 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De maneira análoga aos testes executados para o MultiOuputClassifier, os testes com ClassifierChain não apontam dados muitos promissores, com exceção da label LBBB. Além disso, não percebe-se uma diferença significativa entre os resultados de usando o ClassifierChain e o MultiouputClassifier."
    ]
   },
   {
@@ -8745,6 +8742,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Novamente, a classe LBBB mostra-se a mais fácil de se identificar. Ademais, se compararmos o desempenho ao classificar essa classe usando  o MultiOuputClassifier usando somente amostras doentes e amostras doentes e saudáveis, não é possível perceber uma diferença muito grande. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### ClassifierChain"
    ]
   },
@@ -8810,7 +8814,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A LBBB se confirma como a classe mais fácil de identificar e naõ se percebe diferença significativa nos resultados para identificar essa classe, seja na mudança de Multioutput para ClassifierChain, seja mudando a base da dados para saudáveis e doentes para apenas doentes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Classificação Binária"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nessa seção, buscou-se classificar as amostras em saudáveis e doentes. Para isso, foi o número de amostras de cada tipo foi equalizado por meio da eliminação aletória de amostras doentes da base."
    ]
   },
   {
@@ -8847,7 +8865,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Novamente, não há dados muito promissores nessa classificação. O único valor realmente alto é recall para classe doente usando a Análise Discriminante Quadrática, mas ela não revela uma alta perfomance desse classificador, pois o recall para classe saudável é baixíssimo usando para esse classificador. De todos os classificadores testados,  o RandomForest parece ter o melhor desempenho."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## One class classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nessa seção, foi adotada a estratégia one class classification para verificar 1) se uma amostra é doente ou não e 2) se uma amostra apresenta a label LBBB ou não. Para cada um desses dois cenários, foram testados 4 algoritmos e foram consideradas duas situações: considerando uma classe como inlier a outra como outlier e vice-versa. Por exemplo, no caso 1) foi considerado a situação em que a classe saudável é a inlier e a doente é a outlier e a situação em que a classe saudável é outlier e a classe doente é a inlier."
    ]
   },
   {
@@ -8900,6 +8932,13 @@
     "| IsolationForest    | Sick    |        0.8  |     0.9  | 0.85 |\n",
     "| EllipticEnvelope   | Sick    |        0.79 |     0.5  | 0.61 |\n",
     "| LocalOutlierFactor | Sick    |        0.81 |     **0.99** | **0.89** |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Não há resultados promissores nessa seção. Os valores altos de precisão e recall que ocorrem para a label 'Sick' podem ser explicados pelo fato de que os modelos que apresentaram esses valores desginam muitas amostras para a classe doente e, como ela é a classe majoritária - 3643 doente contra 752 saudáveis - os modelos conseguem acertar uma quantidade considerável de vezes."
    ]
   },
   {
@@ -8979,12 +9018,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| classifier         |   precision |   recall |   f1 |\n",
-    "|:-------------------|------------:|---------:|-----:|\n",
-    "| EllipticEnvelope   |        0.59 |     0.67 | 0.51 |\n",
-    "| IsolationForest    |        **0.66** |     0.64 | **0.64** |\n",
-    "| LocalOutlierFactor |        0.48 |     0.5  | 0.46 |\n",
-    "| OneClassSVM        |        0.62 |     **0.72** | 0.53 |"
+    "| classifier         | label   |   precision |   recall |   f1 |\n",
+    "|:-------------------|:--------|------------:|---------:|-----:|\n",
+    "| OneClassSVM        | LBBB    |        0.26 |     **0.96** | **0.41** |\n",
+    "| IsolationForest    | LBBB    |        **0.44** |     0.36 | 0.39 |\n",
+    "| EllipticEnvelope   | LBBB    |        0.24 |     0.84 | 0.37 |\n",
+    "| LocalOutlierFactor | LBBB    |        0.11 |     0.01 | 0.01 |"
    ]
   },
   {
@@ -8997,6 +9036,13 @@
     "| IsolationForest    | no-LBBB |        0.88 |     0.91 | 0.9  |\n",
     "| EllipticEnvelope   | no-LBBB |        0.94 |     0.5  | 0.65 |\n",
     "| LocalOutlierFactor | no-LBBB |        0.84 |     **0.99** | **0.91** |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Também não parece haver resultados promissores nessa parte. O valor alto de recall, mas baixo de precisão para a label \"LBBB\" para o classificador OneClassSVM sugere que o classificador assinalou amostras para a classe LBBB excessivamente. Fora isso, os valores de precisão e recall altos para a label 'no-LBBB' podem ser explicados novamente pela majoritariedade da classe."
    ]
   },
   {
@@ -9042,6 +9088,13 @@
     "| IsolationForest    | no-LBBB |        0.53 |     0.07 | 0.12 |\n",
     "| EllipticEnvelope   | no-LBBB |        0.75 |     0.44 | 0.55 |\n",
     "| LocalOutlierFactor | no-LBBB |        **0.9** |     0.01 | 0.02 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Também não há resultados muito promissores nessa parte. Além disso, considerar a classe LBBB como inlier parece ter um efeito prejudicial nesse caso."
    ]
   }
  ],
